--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <head>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script type = "module" src="js/script.js" defer></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body>
-<img onclick = "lighttoggle();" id = "darkmode" src="lightmode.png">
+<body id = "LIGHT">
 <div id = "display">
+    <img id = "darkmode" src="images/lightmode.png">
     <h1 id = "title">HEMOANEMIC</h1>
 
     <p>WIP</p>
 
+    <ul>ocslop
+        <li><a href="ocs/DEADINTHEWATER.html">ditw!</a></li>
+        <li><a href="ocs/TUDOES.html">tudoes</a></li>
+    </ul>
     <ul>
-        <li><a href="">ocslop</a></li>
+        <li><a href="fanfics/checkmate.html">pawn to i9#</a> [IX/BARONOFSOMETHING]</li>
     </ul>
 </div></body>
 </html>
