--- a/fanfics/checkmate.html
+++ b/fanfics/checkmate.html
@@ -2,18 +2,18 @@
 <head>
     <script type = "module" src="../js/script.js" defer></script>
     <link rel="stylesheet" href="../css/page.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css">
 #display p[align="right"] {
   background-color: #222;
-  padding: 0.8% 1%;
+  padding: 1% 10px;
   border-left: 0.25rem #ddd solid;
   color: #ddd;
   text-align: left;
   margin: 0px;
-  font-family: monospace;
-  font-size: 115%;
-  font-weight: bold;
+  font-size: 95%;
   transition-duration: 0.25s;
+  font-family: 'Minecraft Regular', monospace;
 }
 
 #display p[align="right"] + p[align="right"] {
