--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <head>
     <script type = "module" src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body id = "LIGHT">
 <div id = "display">
     <img id = "darkmode" src="images/lightmode.png">
     <h1 id = "title">HEMOANEMIC</h1>
-
-    <p>WIP</p>
-
-    <ul>ocslop
-        <li><a href="ocs/DEADINTHEWATER.html">ditw!</a></li>
-        <li><a href="ocs/TUDOES.html">tudoes</a></li>
-    </ul>
-    <ul>
+    <ul><h3>FICS</h3>
+        <p>i'll basically only ever port fics with weird HTML stuff going on onto here, because ao3 is a liiiiiiiiiiittle limited re: what you can actually do with html.</p>
         <li><a href="fanfics/checkmate.html">pawn to i9#</a> [IX/BARONOFSOMETHING]</li>
     </ul>
 </div></body>
