--- a/fanfics/checkmate.html
+++ b/fanfics/checkmate.html
@@ -376,6 +376,9 @@
 <p>The moment the words stick in his brain, his legs take off the same as before; running, running, running, with no end in sight.</p>
 
 <p>Ironically, under the weight of the new command, he feels freer than ever before.</p>
-    
-</div></body>
+
+
+<a href = "https://archiveofourown.org/works/79180286#comments"><button >COMMENT</button></a>
+</div>
+</body>
 </html>
